@@ -253,6 +253,8 @@ library:
     @tab Used in Sim City 3000; file extension .xa.
 @item MD Studio                 @tab   @tab X
 @item Metal Gear Solid: The Twin Snakes @tab @tab X
+@item Megalux Frame             @tab   @tab X
+    @tab Used by Megalux Ultimate Paint
 @item Mobotix .mxg              @tab   @tab X
 @item Monkey's Audio            @tab   @tab X
 @item Motion Pixels MVI         @tab   @tab X
